--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,13 @@
   }
 }
 
+.text-8xl {
+  font-size: clamp(34px, 6vw, 84px);
+}
+
 html,
 body {
+  @apply text-white;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
