--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@
   font-size: clamp(34px, 6vw, 84px);
 }
 
+pre {
+  @apply whitespace-pre-wrap bg-zinc-600 rounded-lg px-4 py-2 my-2;
+}
+
 html,
 body {
   @apply text-white;
